--- a/todey.html
+++ b/todey.html
@@ -13,7 +13,7 @@
 	<body>
 		<div class="big-box">
 		<div class="header">
-			<img src="ppp/图层1@2x.png" alt="" />
+<!-- 			<img src="ppp/图层1@2x.png" alt="" /> -->
 		</div>
 		<div class="sousuo">
 			<div class="sousuo-left">
